# zephelin

./: .buildinfo  .checkpatch.conf  .ci.yml  .gitattributes  .gitignore  CMakeLists.txt  Kconfig  README.md  code_scopes.html  configuration.html  ctf.conf  ctf_to_tef.html  env.sh  genindex.html  index.html  introduction.html  library.html  memory_profiling.html  objects.inv  requirements.txt  ruff.toml  searchindex.js  visual_interface.html  west.yml  zpl_env.sh
.github/workflows/: docs.yml  zephelin.yml
_sources/: ctf_to_tef.md.txt  introduction.md.txt
_static/trace_viewer/: advanced.json  index.html  popout.html  tef_cpu_load.json  tef_marking_code_scopes.json  tef_memory_profiling.json  tef_tflm_profiler.json  tef_tvm_profiler.json
_static/trace_viewer/assets/: index-BVLLIhnz.js  index-CgMdpiHV.css  index-DA4yW5Kz.js  index-DHCRyHuH.js  source-map-CuXacpSh.js
boards/adi/max32690fthr_custom/: Kconfig.max32690fthr_custom  board.cmake  board.yml  max32690fthr_custom_max32690_m4.yaml
boards/adi/max78002evkit_custom/: Kconfig.max78002evkit_custom  board.cmake  board.yml  max78002evkit_custom_max78002_m4.yaml
boards/st/stm32f429i_disc1_custom/: Kconfig.stm32f429i_disc1_custom  board.cmake  board.yml  stm32f429i_disc1_custom.yaml
docs/: .gitignore  Makefile  requirements.txt
docs/source/: code_scopes.md  conf.py  configuration.md  ctf_to_tef.md  index.md  introduction.md  library.md  memory_profiling.md  visual_interface.md
include/: zpl.h
include/zpl/: configuration.h  cpu_load.h  cpu_load_event.h  die_temp.h  die_temp_event.h  inference_event.h  lib.h  memory_event.h  scope_event.h  tflm_event.h  tflm_events.h  tflm_profiler.hpp  tvm_event.h  tvm_events.h  tvm_profiler.h  usb_backend.h
samples/basic/marking_code_scopes/: CMakeLists.txt  common.resource  marking_code_scopes_ctf.robot  marking_code_scopes_plaintext.robot  prj.conf  sample.yaml
samples/common/: TraceTester.py  boards.cmake  socket.robot
samples/common/src/: main.c  tflm_inference.c
samples/common/tflm/: CMakeLists.txt  Kconfig
samples/common/tvm/: CMakeLists.txt
samples/demo/: CMakeLists.txt  demo_ctf.robot  prj.conf  sample.yaml
samples/demo/boards/: max32690evkit_max32690_m4.overlay  stm32f746g_disco.overlay  stm32f746g_disco_lis2ds12.repl
samples/demo/src/: main.c
samples/events/named_event/: gdb_helper.py  named_event_ctf.robot  named_event_plaintext.robot  named_event_plaintext_debugger.robot  named_event_plaintext_trivial_uart.robot  sample.yaml
samples/events/tflm_events/: sample.yaml  tflm_events_ctf.robot  tflm_events_plaintext.robot
samples/profiling/cpu_load/: CMakeLists.txt  cpu_load_ctf.robot  prj.conf  sample.yaml
samples/profiling/die_temp/: CMakeLists.txt  die_temp_ctf.robot  prj.conf  (+2 more)
samples/trace/tflm_profiler/: CMakeLists.txt  prj.conf  sample.yaml  tflm_ctf.robot  tflm_plaintext.robot
samples/trace/tflm_profiler/src/: model.cpp  model.h
samples/trace/tvm_profiler/: CMakeLists.txt  prj.conf  sample.yaml  tvm_profiler_ctf.robot  tvm_profiler_plaintext.robot
samples/trace/tvm_profiler/model/: magic-wand-graph.json
samples/trace/tvm_profiler/src/: main.c  model.c  model.h
scripts/: ctf2tef.py  dump_trace.gdb  extract_tflite_model_data.py  extract_tvm_model_data.py  prepare_trace.py  run_renode.py
scripts/ci/: gather_traces.sh  install_deps.sh  setup_zephyr.sh
tests/: TraceTester.py
tests/ctf2tef/: test_ctf2tef.py  trace.ctf  trace.tef
tests/lib/usb/: CMakeLists.txt  prj.conf  testcase.yaml  usbd_context.ld
tests/lib/usb/src/: main.c
west/: west-commands.yml  west-instrumentation.py  west-prepare-trace.py  west-zpl.py
zephyr/: patches.yml
zpl/: CMakeLists.txt  Kconfig  Kconfig.mute_traces  configuration_debug.c  configuration_none.c  configuration_uart.c  cpu_load.c  die_temp.c  inference_event.c  lib.c  memory_event.c  memory_profiler.c  metadata  scope_event.c  scope_marking.c  tflm_events.c  tflm_profiler.cpp  trivial_uart_backend.c  tvm_events.c  tvm_profiler.c  usb_backend.c  zpl.c
zpl/backends/: CMakeLists.txt  Kconfig
zpl/conf/: CMakeLists.txt  Kconfig  Kconfig.mute_traces  configuration_debug.c  configuration_none.c  configuration_uart.c
zpl/profilers/: CMakeLists.txt  Kconfig
zpl/profilers/cpu/: CMakeLists.txt  Kconfig  cpu_load.c  die_temp.c
zpl/profilers/inference/: CMakeLists.txt  Kconfig  inference_event.c
zpl/profilers/memory/: CMakeLists.txt  Kconfig  memory_event.c  memory_profiler.c
zpl/profilers/tflm/: CMakeLists.txt  Kconfig  tflm_event.c  tflm_profiler.cpp
zpl/profilers/tvm/: CMakeLists.txt  Kconfig  tvm_event.c  tvm_profiler.c
zpl/scopes/: CMakeLists.txt  Kconfig  code_scope.ld  scope_event.c  scope_marking.c
(+190 files in other folders)
